--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>git bash</h3>
+    <h3 style="font-family:sans-serif;">git bash</h3>
+
+    <h3>.git</h3>
+    
 </body>
 </html>
